--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lwl1g4');
-  src:  url('fonts/icomoon.eot?lwl1g4#iefix') format('embedded-opentype'),
+  src: url('fonts/icomoon.eot?lwl1g4');
+  src: url('fonts/icomoon.eot?lwl1g4#iefix') format('embedded-opentype'),
     url('fonts/icomoon.ttf?lwl1g4') format('truetype'),
     url('fonts/icomoon.woff?lwl1g4') format('woff'),
     url('fonts/icomoon.svg?lwl1g4#icomoon') format('svg');
@@ -10,10 +10,11 @@
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: never;
+  speak-as: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -26,47 +27,47 @@
 }
 
 .icon-paw:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-arrow-up:before {
-  content: "\e90d";
+  content: '\e90d';
 }
 .icon-phone:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-close:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-pet-care:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-facebook:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-instagram:before {
-  content: "\1f40c";
+  content: '\1f40c';
 }
 .icon-mail:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-map-pin:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-menu:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-whatsapp:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-youtube:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-casa:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-dog:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-cat:before {
-  content: "\e90c";
+  content: '\e90c';
 }
