--- a/style.css
+++ b/style.css
@@ -178,7 +178,8 @@ nav ul li a {
   position: relative;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li a.active {
   color: var(--base-color);
 }
 
@@ -193,7 +194,8 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after {
   width: 100%;
 }
 
@@ -280,7 +282,6 @@ nav.show div.icon-close {
 #home .image img {
   position: relative;
   right: 2.93rem;
-  left: 1rem;
 }
 
 #home .image img,
@@ -538,6 +539,14 @@ footer .ongs a:hover {
     padding: 10rem 0;
   }
 
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .button {
     height: 3.125rem;
   }
@@ -555,37 +564,86 @@ footer .ongs a:hover {
 
   nav .menu ul li a.title {
     font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
   }
 
   nav .icon-menu {
     display: none;
   }
 
+  /* -Layout- */
   main {
     margin-top: var(--header-height);
   }
 
-  image {
-    position: relative;
+  /* -Home- */
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
   }
-}
 
-/* -Home- */
+  #home .image {
+    order: 1;
+  }
 
-#home .container {
-  grid-auto-flow: column;
-  justify-content: space-between;
-  margin: 0 auto;
-}
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+  }
 
-#home .image {
-  order: 1;
-}
+  /* -About- */
+  #about .container {
+    grid-auto-flow: column;
+    margin: 0 auto;
+  }
 
-#home .text {
-  order: 0;
-  max-width: 24rem;
-  text-align: left;
+  /* -Services- */
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /* -Testimonials- */
+  #testimonials .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* -Contact- */
+  #contact .container {
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .text {
+    max-width: 25rem;
+  }
+
+  /* -Footer- */
+  footer.section {
+    padding: 3.75rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2rem;
+  }
 }
 
 /* --- Larger devices: +992 --- */
@@ -594,8 +652,4 @@ footer .ongs a:hover {
     --title-font-size: 2.25rem;
     --subtitle-font-size: 1.125rem;
   }
-}
-
-a {
-  color:inherit;
 }
