--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a {
 }
 
 img {
-  width: 80%;
+  width: 100%;
   height: auto;
 }
 
@@ -261,7 +261,7 @@ nav.show div.icon-close {
 }
 
 #home .container {
-  margin: 0;
+  margin-left: 10;
 }
 
 #home .image {
@@ -270,12 +270,12 @@ nav.show div.icon-close {
 
 #home .image::before {
   content: '';
-  height: 100%;
+  height: 90%;
   width: 80%;
   background: var(--base-color-second);
   position: absolute;
-  top: -16.8%;
-  left: 16.7%;
+  top: -10%;
+  left: 18%;
   z-index: 0;
 }
 
@@ -320,12 +320,12 @@ nav.show div.icon-close {
 
 #about .image::before {
   content: '';
-  height: 100%;
-  width: 80%;
+  height: 90%;
+  width: 90%;
   background: var(--base-color-second);
   position: absolute;
-  top: -16.8%;
-  left: 16.7%;
+  top: -8.3%;
+  left: -15%;
   z-index: 0;
 }
 
@@ -586,6 +586,7 @@ footer .ongs a:hover {
     grid-auto-flow: column;
     justify-content: space-between;
     margin: 0 auto;
+    grid-column-gap: 8rem;
   }
 
   #home .image {
@@ -602,6 +603,7 @@ footer .ongs a:hover {
   #about .container {
     grid-auto-flow: column;
     margin: 0 auto;
+    grid-column-gap: 4.75rem;
   }
 
   /* -Services- */
